# webview-hs

./: CHANGELOG.md  LICENSE  webview-hs.cabal
src/Graphics/UI/: Webview.hs
src/Graphics/UI/LowLevel/: Webview.hsc
test/: Main.hs
