cabal-version:   3.0
name:            webview-hs
version:         0.1.0.0
license:         BSD-3-Clause
author:          James Hobson
maintainer:      james@hobson.space
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:             warnings
    exposed-modules:    Graphics.UI.Webview
    other-modules:      Graphics.UI.LowLevel.Webview
    build-tool-depends: hsc2hs:hsc2hs
    include-dirs:       webview
    includes:           webview.h
    cxx-sources:        webview/webview.cc
    cxx-options:        -DWEBVIEW_STATIC -std=c++11
    extra-libraries:    stdc++
    frameworks: WebKit
    build-depends:      base ^>=4.16.4.0
    hs-source-dirs:     src
    default-language:   Haskell2010

executable test
  import: warnings
  hs-source-dirs: test
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -threaded
  build-depends: base, webview-hs
